<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/standard_margin"
        tools:context=".DetailActivityFragment"
        tools:showIn="@layout/detail_main">


        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#0A9"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/standard_margin"
            android:paddingRight="@dimen/standard_margin"
            android:text="@string/sample_movie_title"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            />


        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_below="@+id/detail_title"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:contentDescription="@string/cd_movie"/>


        <TextView
            android:id="@+id/detail_release_date"
            style="@style/textTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_title"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_toEndOf="@+id/detail_image"
            android:layout_toRightOf="@id/detail_image"
            android:text="@string/sample_release_date"
            />

        <TextView
            android:id="@+id/detail_vote_average"
            style="@style/textTitle2Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_release_date"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_toEndOf="@+id/detail_image"
            android:layout_toRightOf="@id/detail_image"
            android:text="@string/sample_vote_average"
            />

        <ImageView
            android:id="@+id/detail_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_border_black_48dp"
            android:layout_below="@id/detail_vote_average"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_toEndOf="@+id/detail_image"
            android:layout_toRightOf="@id/detail_image"
            />

        <TextView
            android:id="@+id/detail_overview"
            style="@style/textBodyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_image"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/sample_movie_description"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/detail_overview"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:background="@color/divider_color"
            />

        <TextView
            android:id="@+id/reviews_title"
            style="@style/textTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_overview"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/reviews"
            />

        <LinearLayout
            android:id="@+id/reviews_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviews_title"
            android:layout_marginBottom="@dimen/standard_margin"
            android:orientation="vertical"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/reviews_layout"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:background="@color/divider_color"
            />

        <TextView
            android:id="@+id/trailers_title"
            style="@style/textTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviews_layout"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/trailers"
            />

        <LinearLayout
            android:id="@+id/trailers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailers_title"
            android:orientation="vertical"/>


    </RelativeLayout>

</ScrollView>
